--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,10 +3,18 @@ body {
   text-align: center;
 }
 
-.heading {
-  background-image: src=("resources/images/the-flatiron-building.png");
+.heading,
+.NYC {
+  background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
 }
 
 #footer {
   text-align: left;
+  background-color: dimgray;
+}
+
+.heading,
+.NYC,
+#footer {
+  color: white;
 }
